# tcc-maxtemp-watcher

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
